[tool.poetry]
name = "solcix"
version = "0.1.4"
description = "A Python wrapper for the Solidity compiler. Switch between versions, compile, and manage artifacts."
authors = ["alan890104 <alan890104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cfgv = "3.3.1"
click = "8.1.3"
distlib = "0.3.6"
filelock = "3.10.7"
identify = "2.5.22"
joblib = "1.2.0"
mypy-extensions = "1.0.0"
nodeenv = "1.7.0"
packaging = "23.0"
pathspec = "0.11.1"
platformdirs = "3.2.0"
pycryptodome = "3.17"
pyyaml = "6.0"
tomli = "2.0.1"
tqdm = "4.65.0"
virtualenv = "20.21.0"
pytest-mock = "^3.10.0"
colorama = "^0.4.6"
pyfiglet = "^0.8.post1"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pre-commit = "^3.2.2"
pytest-cov = "^4.0.0"
pytest = "^7.2.2"

[tool.poetry.scripts]
solcix = "solcix.__main__:cli"
solc = "solcix.__main__:solc"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
